--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,18 +4,18 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-    {% if id is undefined %}
+    {% if states is mapping %}
         <H1>States</H1>
 	<UL>
-	{% for state in states %}
+	{% for state in states.values()|sort(attribute='name') %}
             <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
 	{% endfor %}
 	</UL>
-    {% elif "State.%s"|format(id) in states %}
-        <H1>State: {{ target_state.name }}</H1>
+    {% elif state is defined %}
+        <H1>State: {{ state.name }}</H1>
 	<H3>Cities:</H3>
 	<UL>
-	{% for city in target_state.cities|sort(attribute='name') %}
+	{% for city in state.cities|sort(attribute='name') %}
 	    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
 	{% endfor %}
 	</UL>
